# rgbd_extrinsic_calibration

./: CMakeLists.txt  README.md  main.cpp  package.xml  test_sensor_depth.cpp
include/: decomposeMatrixT.h  estimatePlane.h  generatePointCloud.h  getCameraOrientation.h  getExternalParameterFromPlane.h  judgeTheCondition.h  pointCloudTransform.h  showDepthSensorModel.h
launch/: start_arm.launch
nodes/: spark_object.py
rviz/: display.rviz
src/: decomposeMatrixT.cpp  estimatePlane.cpp  generatePointCloud.cpp  getCameraOrientation.cpp  getExternalParameterFromPlane.cpp  judgeTheCondition.cpp  pointCloudTransform.cpp  showDepthSensorModel.cpp
